force-app/main/default/objects/FlexConstants__c/FlexConstants__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Flex - This stores constants related to C&amp;R flex project</description>
    <label>FlexConstants</label>
</CustomObject>