force-app/main/default/objects/FlexConstants__c/fields/AdminEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>AdminEmailAddress__c</fullName>
    <description>This Custom Setting will store the email address of the Admin, which will later be used to send an email to the admins if a C&amp;R Process fails.</description>
    <label>AdminEmailAddress</label>
    <type>TextArea</type>
</CustomField>