force-app/main/default/objects/FlexConstants__c/fields/Enablement_Link__c.field-meta.xml
<CustomField>
    <fullName>Enablement_Link__c</fullName>
    <description>Link for Flex: R1 Enablement Content</description>
    <inlineHelpText>Enablement Link URL</inlineHelpText>
    <label>Enablement Link</label>
    <type>Url</type>
</CustomField>