force-app/main/default/objects/FlexConstants__c/fields/Mid_Contract_help_text_message__c.field-meta.xml
<CustomField>
    <fullName>Mid_Contract_help_text_message__c</fullName>
    <description>GTMS-26770: C&amp;R Process Initiation (Modal) Enhancements</description>
    <label>Mid Contract help text message</label>
    <type>TextArea</type>
</CustomField>