force-app/main/default/objects/FlexConstants__c/fields/Net_New_Products__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Products__c</fullName>
    <label>Net New Products</label>
    <length>25</length>
    <type>Text</type>
</CustomField>