force-app/main/default/objects/FlexConstants__c/fields/Upgraded_Products__c.field-meta.xml
<CustomField>
    <fullName>Upgraded_Products__c</fullName>
    <description>This Custom Setting will store the Quote line group name</description>
    <inlineHelpText>This Custom Setting will store the Quote line group name</inlineHelpText>
    <label>Upgraded Products</label>
    <length>25</length>
    <type>Text</type>
</CustomField>